# microscope_control

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml
.github/workflows/: tests.yml
autofocus/: __init__.py  benchmark.py  core.py  metrics.py  test.py  tissue_detection.py
config/: manager.py
docs/: HARDWARE_PROPERTIES_GUIDE.md  WHITE_BALANCE_DEVELOPER_GUIDE.md
hardware/: __init__.py  base.py  pycromanager.py
microscope_control/: __init__.py
microscope_control/autofocus/: benchmark.py  core.py  metrics.py  strategies.py  test.py  tissue_detection.py
microscope_control/config/: __init__.py  manager.py
microscope_control/hardware/: __init__.py  base.py  detector.py  illumination.py  pycromanager.py  rotation.py  stage.py  stage_cache.py
microscope_control/hardware/camera/: __init__.py  base.py  jai_camera.py  laser_scanning_camera.py  pycromanager_camera.py
microscope_control/jai/: __init__.py  calibration.py  noise.py  noise_characterization.py  properties.py
tests/: __init__.py  conftest.py  test_autofocus_drift_runaway.py  test_autofocus_edge_retry.py  test_autofocus_metrics.py  test_config_manager.py  test_coordinate_validation.py  test_tissue_detection.py
tools/: dump_device_properties.py  jai_noise_test.py  wb_hardware_diagnostic.py
