[project]
name = "microscope-control"
version = "1.0.0"
description = "Hardware control library for microscopes via Pycromanager (Micro-Manager)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Mike Nelson", email = "msnelson8@wisc.edu"},
    {name = "Bin Li", email = "bli346@wisc.edu"},
    {name = "Jenu Chacko", email = "jenu.chacko@wisc.edu"}
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "pycromanager>=0.13.0",
    "pyyaml>=6.0.1",
    "psutil>=5.9.0",
    "matplotlib>=3.8.0",
    "scikit-image>=0.21.0",
    "opencv-python>=4.8.0",
    "ppm-library>=1.0.0",  # For debayering
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.1.0",
]

[project.urls]
"Homepage" = "https://github.com/your-org/microscope-control"
"Bug Tracker" = "https://github.com/your-org/microscope-control/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Package files are in microscope_control/ subdirectory
packages = ["microscope_control"]

[tool.ruff]
line-length = 100
extend-select = ["C4", "NPY", "PD", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=microscope_control",
    "--cov-report=term-missing",
    "--cov-report=html",
]
